correct accessibility color contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ nav ul li a:hover {
 
 nav ul li:nth-child(2) {
     background-color: #424040;
-    color: #000;
+    color: #42af7f;
     border: 1px solid #f3dfa2;
     font-weight: bold;
     text-decoration: none;
